# opengl-round2

./: .gitignore  CMakeLists.txt  Makefile  README.md
src/: camera.h  data.h  ebo.cpp  ebo.h  main.cpp  mesh.cpp  mesh.h  model.cpp  model.h  offscreen_render.cpp  shaders.cpp  shaders.h  texture.cpp  texture.h  vao.cpp  vao.h  vbo.cpp  vbo.h
src/shaders/: default.frag  default.vert
